--- a/css/style.css
+++ b/css/style.css
@@ -68,24 +68,25 @@ html {
 
 #settings ul {
 	float: right;
-    width: 40%;
 	background-color: #fff;
 	box-shadow: 1px 2px 6px 2px rgba(34, 34, 34, 0.2);
     list-style: none;
-    margin: 0;
-    padding: 0%;
+    margin: 0%;
+    padding: 0% 5%;
 }
 
 #settings ul li {
-    padding: 10%;
+    padding-bottom: 15%;
+    color:rgba(0, 0, 0, 0.85);
+}
+
+#settings ul li:first-child {
+    padding-top: 15%;
 }
 
 #settings ul li:active {
-    background-color:rgba(240, 240, 240, 1);
-}
-
-#settings ul li {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    color:rgb(0, 0, 0);
+    font-weight:500;
 }
 
 .card1 {
