--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ body {
 
 #dashboard {
 	height: 100vh;
-	background-color: #fff;
+	background-color: rgba(51, 171, 50, 0.18);
 }
 
 .dbHeader {
@@ -231,8 +231,7 @@ body {
 	top: 0vh;
 	left: 0vw;
 	width: 100vw;
-	height: 7vh;
-	padding: 15px 15px;
+	padding: 15px;
 	font-size: 15px;
 	font-weight: 600;
 	color: #eee;
@@ -248,9 +247,15 @@ body {
 	position: fixed;
 	top: 7vh;
 	left: 0vw;
-	margin:2vh 3vw;
-	height: 68.5vh;
-	width: 94vw;
+	padding: 2vh 3vw;
+	width: 100vw;
+	text-align: left;
+	font-size: 16px;
+	font-weight: normal;
+	line-height: 1.7;
+	overflow: scroll;
+
+	/* height: 68.5vh;
 	box-shadow: inset 0 0 5px rgba(8, 8, 8, 0.2);
 	background-color: rgba(51, 171, 50, 0.18);
 	text-align: left;
@@ -259,20 +264,23 @@ body {
 	padding: 10px;
 	line-height: 1.7;
 	overflow: scroll;
-	color: rgba(84, 84, 84, 0.9);
+	color: rgba(84, 84, 84, 0.9); */
 }
 
-.dbControls{
+.dbControls {
 	position: fixed;
-	bottom: 1.5vh;
+	bottom: 0vh;
 	left: 0vw;
 	width: 100vw;
 	text-align: center;
+	box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.3);
+	padding: 10px 0%;
+	background-color: #fff;
 }
 
 .card1 {
 	width: 46vw;
-	margin: 0.5vh 1vw;
+	margin: 5px;
 	display: inline-block;
 	box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
 	font-size: 15px;
