--- a/css/style.css
+++ b/css/style.css
@@ -245,26 +245,15 @@ body {
 
 .dbResponse {
 	position: fixed;
-	top: 7vh;
+	top: 52px;
 	left: 0vw;
-	padding: 2vh 3vw;
+	padding: 15px;
 	width: 100vw;
 	text-align: left;
 	font-size: 16px;
 	font-weight: normal;
 	line-height: 1.7;
 	overflow: scroll;
-
-	/* height: 68.5vh;
-	box-shadow: inset 0 0 5px rgba(8, 8, 8, 0.2);
-	background-color: rgba(51, 171, 50, 0.18);
-	text-align: left;
-	font-size: 16px;
-	font-weight: normal;
-	padding: 10px;
-	line-height: 1.7;
-	overflow: scroll;
-	color: rgba(84, 84, 84, 0.9); */
 }
 
 .dbControls {
@@ -302,12 +291,13 @@ body {
 #settings {
 	text-align: left;
 	position: fixed;
-	right: 1vw;
-	top: 1vh;
+	right: 0vw;
+	top: 0vh;
 	width: 100vw;
 	height: 100vh;
+	padding: 5px;
 	z-index: 2;
-	background-color: transparent;
+	background-color: rgba(0, 0, 0, 0.2);
 }
 
 #settings ul {
