--- a/css/style.css
+++ b/css/style.css
@@ -60,11 +60,10 @@ body {
 
 .slide-indicator {
 	position: fixed;
-	bottom: 20px;
+	bottom: 30px;
 	position: fixed;
 	width: 100vw;
 	text-align: center;
-	color: #2ad;
 	font-size: 10px;
 	z-index: 5;
 }
@@ -83,6 +82,43 @@ body {
 .slide-right {
 	position: absolute;
 	animation: animateright 0.1s
+}
+
+.slide-controls {
+	position: fixed;
+	bottom: 30px;
+	position: fixed;
+	width: 100vw;
+	text-align: center;
+	color: black;
+	font-size: 15px;
+	z-index: 5;
+}
+
+.slide-controls i {
+	height: 40px;
+	width: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 30px;
+	background-color: white;
+	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+}
+
+.slide-controls i:first-child {
+	margin-left: 30px;
+	float: left;
+}
+
+.slide-controls i:last-child {
+	margin-right: 30px;
+	float: right;
+}
+
+.slide-controls i:active {
+	background-color: rgb(238, 238, 238);
+	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
 }
 
 @keyframes animateleft {
