--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
 	position: fixed;
 	width: 100vw;
 	text-align: center;
-	color: black;
+	color: rgba(0, 0, 0, 0.7);
 	font-size: 15px;
 	z-index: 5;
 }
@@ -117,7 +117,8 @@ body {
 
 .slide-controls i:active {
 	background-color: rgb(238, 238, 238);
-	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
+	color: rgba(0, 0, 0, 1);
+	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
 }
 
 @keyframes animateleft {
