--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 body {
 	overflow: hidden !important;
+	user-select: none;
 }
 
 .d-none {
@@ -48,6 +49,19 @@ body {
 	margin-bottom: 20px;
 }
 
+.Header {
+	text-align: left;
+	background-color: rgb(0, 89, 167);
+	position: fixed;
+	top: 0vh;
+	left: 0vw;
+	width: 100vw;
+	padding: 15px;
+	font-size: 15px;
+	font-weight: 600;
+	color: #eee;
+}
+
 /*#endregion Global*/
 
 
@@ -61,7 +75,6 @@ body {
 .slide-indicator {
 	position: fixed;
 	bottom: 30px;
-	position: fixed;
 	width: 100vw;
 	text-align: center;
 	font-size: 10px;
@@ -87,7 +100,6 @@ body {
 .slide-controls {
 	position: fixed;
 	bottom: 30px;
-	position: fixed;
 	width: 100vw;
 	text-align: center;
 	color: rgba(0, 0, 0, 0.7);
@@ -166,6 +178,49 @@ body {
 }
 
 /*#endregion Loading*/
+
+
+/*#region Remover*/
+
+#remover {
+	height: 100vh;
+	background-color: #fff;
+	text-align: center;
+}
+
+.remover-pannel {
+	position: fixed;
+	top: 52px;
+	left: 0vw;
+	width: 100vw;
+	padding: 15px;
+}
+
+.mob-num {
+	background-color: rgb(117, 220, 252);
+	padding: 10px;
+	margin-right: 10px;
+	border-radius: 15px 0px;
+	font-size: 16px;
+	font-weight: 600;
+	float: left;
+}
+
+
+.remover-pannel i {
+	float: left;
+	height: 40px;
+	width: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 30px;
+	color: white;
+	box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.3);
+	background-color: red;
+}
+
+/*#endregion Remover*/
 
 
 /*#region Login*/
@@ -260,20 +315,7 @@ body {
 	background-color: rgba(51, 171, 50, 0.18);
 }
 
-.dbHeader {
-	text-align: left;
-	background-color: rgb(0, 89, 167);
-	position: fixed;
-	top: 0vh;
-	left: 0vw;
-	width: 100vw;
-	padding: 15px;
-	font-size: 15px;
-	font-weight: 600;
-	color: #eee;
-}
-
-.dbHeader span {
+.Header span {
 	float: right;
 	font-size: 16px;
 	font-weight: normal;
